--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@
 
 section{
   height:50vh;
-  display: flex;
+  display:flex;
   align-items: center;
   justify-content: center;
   color: white;
@@ -44,6 +44,7 @@ div.gallery {
 
 div.gallery:hover {
   transform: scale(1.1); 
+  
 }
 
 div.gallery img {
@@ -57,7 +58,7 @@ div.desc {
 }
 
 body {
-  height: 120vh;
+  height: 100%;
   width: 100%;
 }
 
@@ -76,22 +77,28 @@ body::-webkit-scrollbar-thumb {
   background-color: black;   
   border-radius: 1.25rem; 
 }
+/* font */
 
+.desc{
+  font-family: "DM Serif Display", serif;
+}
 
 
 /* nav */
 
 
-.page1 {
+.n1 {
   position: fixed;
   width: 100%;
-  background-color: rgb(39, 13, 129);
+  background-color: black;
   min-height: 2rem;
-  padding: 0 2rem;
+  padding: 0 9rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  opacity: 50%;
+  height: 70px;
+  top: 0;
+  z-index: 9999
 }
 
 .menunav {
@@ -111,7 +118,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .nav-item:hover {
-  transform: scale(2);
+  transform: scale(1.4);
   color: #646a74;
 }
 
